--- a/manifiestaFront/package.json
+++ b/manifiestaFront/package.json
@@ -4,22 +4,29 @@
   "description": "frontend of an application of collective selection of music",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --hot --open --mode development --port 3000"
   },
   "author": "sciLuv",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.3",
     "css-loader": "^6.11.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "nanoid": "^5.0.6",
+    "react-bootstrap": "^2.10.2",
+    "sass": "^1.74.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "nanoid": "^5.0.6",
-    "react-bootstrap": "^2.10.2"
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3"
   }
 }
