--- a/manifiestaFront/package.json
+++ b/manifiestaFront/package.json
@@ -26,7 +26,11 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   }
 }
