--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=manifiestaBack
 spring.datasource.url=jdbc:mysql://localhost:3306/manifiesta?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
 spring.datasource.password=
@@ -9,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
 front.url=http://localhost:3000
+
+#pour lire le data.sql a la suite de la génération des tables par spring
+spring.datasource.initialization-mode=always
+spring.sql.init.platform=mysql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
