--- a/manifiestaFront/package.json
+++ b/manifiestaFront/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^5.0.6",
     "react-bootstrap": "^2.10.2",
     "sass": "^1.74.1",
+    "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
