adding path and controller for spotify api testing

--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.datasource.initialization-mode=always
 spring.sql.init.platform=mysql
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+
+#pour que les variables d'environnement fonctionnent
+spring.profiles.active=local
+
+spotify.client.id=${4cb9747367814a04be45cbd1493d586c}
+spotify.client.secret=${f5be1c0657e745739cf1307b34d897ef}
+spotify.redirection.uri=${http://127.0.0.1:3000/}
