--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/manifiesta?createDatabaseIfNot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123-Soleil
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
@@ -16,9 +16,7 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 
-#pour que les variables d'environnement fonctionnent
-spring.profiles.active=local
 
-spotify.client.id=${4cb9747367814a04be45cbd1493d586c}
-spotify.client.secret=${f5be1c0657e745739cf1307b34d897ef}
-spotify.redirection.uri=${http://127.0.0.1:3000/}
+spotify.client.id=4cb9747367814a04be45cbd1493d586c
+spotify.client.secret=f5be1c0657e745739cf1307b34d897ef
+spotify.redirect.uri=http://localhost:3000/spotify/
