adding settings in few files for security and it database

--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
 front.url=http://localhost:3000
+server.port=8180
 
 #pour lire le data.sql a la suite de la génération des tables par spring
 spring.datasource.initialization-mode=always
@@ -22,3 +23,12 @@ spring.profiles.active=local
 spotify.client.id=${4cb9747367814a04be45cbd1493d586c}
 spotify.client.secret=${f5be1c0657e745739cf1307b34d897ef}
 spotify.redirection.uri=${http://127.0.0.1:3000/}
+
+
+
+#Pour se connecter a keycloak
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/manifiesta
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+jwt.auth.converter.resource-id=boot-client
+jwt.auth.converter.principle-attribute=preferred_username
