--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -3,12 +3,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/manifiesta?createDatabaseIfNot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
-spring.datasource.password=123-Soleil
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
 front.url=http://localhost:3000
 server.port=8180
+
+logging.level.org.springframework.security=DEBUG
 
 #pour lire le data.sql a la suite de la génération des tables par spring
 spring.datasource.initialization-mode=always
@@ -23,8 +25,9 @@ spotify.redirect.uri=http://localhost:3000/spotify/
 
 
 
+
 #Pour se connecter a keycloak
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/manifiesta
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/manifiesta
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 jwt.auth.converter.resource-id=boot-client
