--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=manifiestaBack
 spring.datasource.url=jdbc:mysql://localhost:3306/manifiesta?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=keycloakAdmin
+spring.datasource.password=g7PUOC-hqD-&
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
