adding keycloak role in account creation

--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -23,13 +23,13 @@ spotify.client.id=4cb9747367814a04be45cbd1493d586c
 spotify.client.secret=f5be1c0657e745739cf1307b34d897ef
 spotify.redirect.uri=http://localhost:3000/spotify/
 
-
+keycloak.manifiesta.admin.cli.secret=nVxqLHElpsoAuvREh5MzbViJp6uGhuNL
 
 
 #Pour se connecter a keycloak
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/manifiesta
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/manifiesta
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
-jwt.auth.converter.resource-id=boot-client
+jwt.auth.converter.resource-id=manifiesta
 jwt.auth.converter.principle-attribute=preferred_username
 
