adding automatic verification of validity of access token and connection path

--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -33,3 +33,4 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.r
 jwt.auth.converter.resource-id=manifiesta
 jwt.auth.converter.principle-attribute=preferred_username
 
+server.error.include-stacktrace=never
