--- a/manifiestaFront/package.json
+++ b/manifiestaFront/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
+    "react": "^18.2.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "sockjs": "^0.3.24",
