--- a/manifiestaBack/src/main/resources/application.properties
+++ b/manifiestaBack/src/main/resources/application.properties
@@ -5,14 +5,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=keycloakAdmin
 spring.datasource.password=g7PUOC-hqD-&
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.show-sql=false 
 spring.jpa.open-in-view=false
 front.url=http://localhost:3000
 server.port=8180
 
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=ERROR
 
-#pour lire le data.sql a la suite de la génération des tables par spring
+
+
+#pour lire le data.sql a la suite de la gï¿½nï¿½ration des tables par spring
 spring.datasource.initialization-mode=always
 spring.sql.init.platform=mysql
 spring.sql.init.mode=always
